# Spells

./: .gitignore  CMakeLists.txt  FallingPointEmitter.cpp  FallingPointEmitter.hpp  PathResolver.mm  README.md  SpellGenerator.cpp  SpellGenerator.h  SpellGenerator.hpp  Spells.cpp  Spells.h  Spells.hpp  Util.cpp  Util.hpp  VectorEmitter.cpp  VectorEmitter.hpp  helpers.cmake  main.cpp
cmake_modules/: FindThor.cmake
gimps/: Circle.xcf
rundirectory/data/shader/: Noise.frag  RadialGradient.frag  RectangleGradient.frag
rundirectory/data/sounds/: LICENSE.md
rundirectory/data/spells/: Aguamenti.spell  Alohomora.spell  Avis.spell  Dummy.spell  Expelliarmus.spell  Incendio.spell  Lumos.spell  README.md  Wingardium_Leviosa.spell
rundirectory/data/textures/: LICENSE.md
src/: Affectors.hpp  ArcSegment.cpp  ArcSegment.hpp  Bezier.cpp  Bezier.hpp  BezierCurve.cpp  BezierCurve.hpp  Clock.cpp  Clock.hpp  Ellipse.cpp  Ellipse.hpp  FallingPointEmitter.cpp  FallingPointEmitter.hpp  Level.cpp  Level.hpp  LoadHelpers.cpp  LoadHelpers.hpp  PathResolver.hpp  SpellGenerator.cpp  SpellGenerator.hpp  Spells.cpp  Spells.hpp  ToggleEmitter.hpp  Util.cpp  Util.hpp  VectorEmitter.cpp  VectorEmitter.hpp  main.cpp
src/nanosvg/: LICENSE.txt
src/osx/: Info.plist.in  PathResolver.mm
